samples/_failures_safe/1761299268_a514c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6c1ae72.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_f6c1ae72.c:159:72: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  159 |     if (tokenizer->position < tokenizer->input_len && tokenizer->input[token
      |                                                                        ^~~~~
      |                                                                        Token
./samples/SAFE/__tmp_f6c1ae72.c:159:72: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f6c1ae72.c:159:77: error: expected ‘]’ at end of input
  159 |     if (tokenizer->position < tokenizer->input_len && tokenizer->input[token
      |                                                                             ^
      |                                                                             ]
./samples/SAFE/__tmp_f6c1ae72.c:159:5: error: expected declaration or statement at end of input
  159 |     if (tokenizer->position < tokenizer->input_len && tokenizer->input[token
      |     ^~
